# PolyMCP-Inspector

./: LICENSE  README.md  pyproject.toml
desktop-tauri/: README.md  package-lock.json  package.json
desktop-tauri/src/: index.html
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/src/: main.rs
polymcp_inspector/: __init__.py  __main__.py  mcp_stdio_client.py  server.py
scripts/: build_backend_exe.ps1  build_backend_ts_exe.ps1
ts_backend/: package-lock.json  package.json  tsconfig.json
ts_backend/src/: mcp_stdio_client.ts  server.ts
