[package]
name = "polymcp-inspector-desktop"
version = "0.1.0"
description = "PolyMCP Inspector Desktop"
authors = ["poly-mcp"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tauri = { version = "1.6", features = ["shell-open"] }
ureq = "2.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
